# vela

./: .gitignore  Cargo.toml  README.md  SPEC.md
crates/vela-bytecode/: Cargo.toml
crates/vela-bytecode/src/: lib.rs
crates/vela-bytecode/tests/: smoke.rs
crates/vela-check/: Cargo.toml
crates/vela-check/src/: explain.rs  lib.rs
crates/vela-check/tests/: annotations.rs  arithmetic.rs  bindings.rs  bracket_annotations.rs  compound.rs  concat.rs  conditional.rs  cons_pat.rs  dataframe_schema.rs  destructure.rs  effectful.rs  exhaustive.rs  formula_and_stream.rs  functions.rs  literals.rs  namespaces.rs  nested_exhaustive.rs  nominal_record.rs  option_result.rs  pat_full.rs  pipeline.rs  polymorphism.rs  prelude.rs  question.rs  question_full.rs  row_poly.rs  shadowing.rs  smoke.rs  stats_and_df.rs  traits.rs  type_decl.rs
crates/vela-cli/: Cargo.toml
crates/vela-cli/src/: main.rs
crates/vela-compile/: Cargo.toml
crates/vela-compile/src/: lib.rs
crates/vela-diag/: Cargo.toml
crates/vela-diag/src/: lib.rs
crates/vela-diag/tests/: render.rs
crates/vela-eval/: Cargo.toml
crates/vela-eval/src/: lib.rs
crates/vela-eval/tests/: basic.rs  format.rs  match_and_types.rs  prelude_builtins.rs  question_op.rs  series_builtins.rs  test_runner.rs  trait_impl.rs
crates/vela-fmt/: Cargo.toml
crates/vela-fmt/src/: lib.rs
crates/vela-fmt/tests/: roundtrip.rs
crates/vela-lexer/: Cargo.toml
crates/vela-lexer/src/: lib.rs
crates/vela-lexer/tests/: comment.rs  continuation.rs  float.rs  hex_binary.rs  ident_keyword.rs  indent.rs  integer.rs  punctuation.rs  string.rs  suffixed_number.rs  symbol.rs
crates/vela-parser/: Cargo.toml
crates/vela-parser/src/: lib.rs
crates/vela-parser/tests/: app_block.rs  application.rs  array.rs  atoms.rs  bindings.rs  block.rs  concurrency.rs  conditional.rs  dataframe.rs  destructure.rs  error_span.rs  extern_block.rs  field.rs  for_loop.rs  imports.rs  lambda.rs  literals.rs  match_expr.rs  mutation.rs  operators.rs  pat_advanced.rs  pat_compound.rs  pat_guards.rs  pat_list.rs  pat_range.rs  pattern_params.rs  program.rs  pub_modifier.rs  record.rs  series.rs  smoke.rs  symbol.rs  tests_block.rs  trait_impl.rs  tuple.rs  type_bracket_app.rs  type_decl.rs  typed_let.rs
crates/vela-pkg/: Cargo.toml
crates/vela-pkg/src/: lib.rs
crates/vela-pkg/tests/: scaffold.rs
crates/vela-repl/: Cargo.toml
crates/vela-repl/src/: lib.rs
crates/vela-vm/: Cargo.toml
crates/vela-vm/src/: lib.rs
crates/vela-vm/tests/: end_to_end.rs
docs/: ARCHITECTURE.md
