[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.95"
license      = "Apache-2.0"
repository   = "https://github.com/collide2954/vela"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
