[package]
name        = "vela-cli"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }

[[bin]]
name = "vela"
path = "src/main.rs"

[dependencies]
vela-check  = { path = "../vela-check" }
vela-diag   = { path = "../vela-diag" }
vela-parser = { path = "../vela-parser" }

[lints]
workspace = true
