[package]
name         = "vela-fmt"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[dependencies]
vela-parser = { path = "../vela-parser" }

[lints]
workspace = true
