[package]
name         = "vela-vm"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[dependencies]
vela-bytecode = { path = "../vela-bytecode" }

[dev-dependencies]
vela-compile = { path = "../vela-compile" }

[lints]
workspace = true
